--- a/nav.css
+++ b/nav.css
@@ -1,8 +1,8 @@
 /*
 Color Palette
-background color: #200439
-primary: #512C73
-secondary: #361356
+background color: #910439
+primary: #572C73
+secondary: #36135D
 tertiary: #6F4D8F
 accent: #9277AC
 vegasGold: #c5b358
@@ -23,7 +23,7 @@ black: #000
 .logo {
     font-size: 2.2rem;
     margin: 0.75rem 2.5rem;
-    color: #c5b358;
+    color: #fff;
     font-family: 'Dancing Script', cursive;
 }
 
@@ -47,7 +47,7 @@ black: #000
 }
 
 .navbar-links li:hover {
-    background-color: #361356;
+    background-color: #39935D;
 }
 
 .toggle-button {
@@ -84,7 +84,7 @@ black: #000
 
 .bottomNav li a {
     text-decoration: none;
-    color: #c5b358;
+    color: #fff;
     display: block;
 }
 
