--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Color Palette
-background color: #200439
-primary: #512C73
-secondary: #361356
+background color: #910439
+primary: #572C73
+secondary: #36135D
 tertiary: #6F4D8F
 accent: #9277AC
 vegasGold: #c5b358
@@ -20,7 +20,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    background-color: #200439;
+    background-color: #910439;
     color: #fff;
 }
 
@@ -50,7 +50,7 @@ body {
 }
 
 .heroName {
-    color: #c5b358;
+    color: #fff;
     font-size: 2.5rem;
     text-transform: uppercase;
 }
@@ -62,18 +62,18 @@ body {
 .button {
     background-color: #fff;
     padding: 1rem;
-    border: 1px solid #9277AC;
+    border: 0px;
     border-radius: 25px;
     font-size: 0.9rem;
     font-weight: 700;
-    color: #200439;
+    color: #910439;
     text-decoration: none;
     box-shadow: 8px 8px 4px #000;
 }
 
 .button:hover {
-    background-color: #361256;
-    color: #c5b358;
+    background-color: #39935D;
+    color: #fff;
     transform: scale(1.5);
     /* (150% zoom - note: if the zoom is too large, it will go outside of the viewport) */
 }
@@ -87,11 +87,11 @@ body {
 
 .projectCard {
     background-color: #fff;
-    color: #200439;
+    color: #39935D;
     margin: 4rem 3rem;
     padding: 0.5rem 2rem;
     text-align: center;
-    border: 1px solid #9277AC;
+    border: 0px solid #9277AC;
     border-radius: 1rem;
     box-shadow: 10px 10px 5px #000;
 }
@@ -114,6 +114,7 @@ body {
 }
 
 .projectIcons {
+    color: #39935D;
     display: flex;
     justify-content: space-evenly;
     font-size: 1.2rem;
@@ -121,6 +122,7 @@ body {
 }
 
 .projectIcons p {
+    color: #39935D;
     margin: 0 0 1rem 0;
     font-size: 0.8rem;
 }
@@ -137,7 +139,7 @@ body {
 
 footer {
     text-align: center;
-    color: #c5b358;
+    color: #fff;
     margin: 10rem 0;
     border-top: 1px solid #9277AC;
 }
@@ -146,7 +148,7 @@ footer {
     margin: 1rem;
     padding: 1rem;
     font-size: 1rem;
-    color: #c5b358;
+    color: #fff;
     display: block;
 }
 
