--- a/style.css
+++ b/style.css
@@ -130,11 +130,13 @@ body {
 .fa-github {
     font-size: 2.2rem;
     padding: 1.5rem;
+    color: #39935D;
 }
 
 .fa-file {
     font-size: 2.2rem;
     padding: 1.5rem;
+    color: #39935D;
 }
 
 footer {
